--- a/banaka-split.ipynb
+++ b/banaka-split.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# API Nakala"
+    "# Banaka Split\n",
+    "Ce notebook [Julia](https://julialang.org/) a été réalisé dans le cadre de l'[ANR Experts](https://experts.huma-num.fr/) afin d'évaluer des méthodes de découpage automatique de photographies comportant des double pages et accessibles depuis [Nakala](https://nakala.fr/).\n",
+    "<figure>\n",
+    "    <img src=\"https://api.nakala.fr/data/10.34847/nkl.027b840e/5c8e77a046216ab6aed848b2f781deb9495fea76\" alt=\"z1j432\" width=\"300\">\n",
+    "    <figcaption>Z1J432d001</figcaption>\n",
+    "</figure>\n",
+    "\n",
+    "**Note** une clé API est requise pour récupérer les images depuis l'[API Nakala](https://api.nakala.fr/)."
    ]
   },
   {
@@ -20,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# chargement des paquets\n",
     "using CSV\n",
     "using DataFrames\n",
     "using ImageSegmentation\n",
@@ -85,10 +93,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "title = \"Z1J434\"\n",
-    "lang = \"\"\n",
-    "firstImage = 1\n",
-    "lastImage = 2\n",
+    "title = \"Z1J434\" # titre de la donnée\n",
+    "lang = \"\" # langue du titre, option\n",
+    "# @todo faire un range\n",
+    "firstImage = 1 # première image\n",
+    "lastImage = 2 # dernière image\n",
     "\n",
     "scope = [\"deposited\", \"owned\", \"shared\", \"editable\", \"readable\", \"all\"]\n",
     "#deposited : les données déposées par l'utilisateur (ROLE_DEPOSITOR)\n",
@@ -137,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "urls = Vector()\n",
+    "imgs = Vector()\n",
     "for i in firstImage:lastImage\n",
     "  file = files[i]\n",
     "  fileName = get(file, \"name\", \"unknown\")\n",
@@ -153,17 +162,18 @@
     "    \"label\" => fileName\n",
     "  )\n",
     "\n",
-    "  push!(urls, img)\n",
+    "  push!(imgs, img)\n",
     "end\n",
     "\n",
-    "urls"
+    "imgs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fonction Split()"
+    "## Split()\n",
+    "`Split()` est une fonction qui scinde les images en deux et enregistre les images découpées."
    ]
   },
   {
@@ -189,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for img in urls\n",
+    "for img in imgs\n",
     "  label = get(img, \"label\", \"unknown\")\n",
     "  file = download(get(img, \"url\", \"\")) |> load\n",
     "  s = size(file)\n",
@@ -209,7 +219,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spliiit\n"
+    "## Spliiit\n",
+    "`spliiit()` a recours à des algorithmes de segmentation pour tenter de \"repérer\" les pages et déterminer leurs coordonnées, afin d'y accéder via l'API IIIF de Nakala."
    ]
   },
   {
@@ -262,13 +273,6 @@
     "end\n",
     "t"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
